# auto-doc

./: .gitignore  LICENSE  README.md  TODOS.md  auto_design_spec.md  pyproject.toml
docs/superpowers/plans/: 2026-05-22-claim-graph-redesign.md  2026-05-24-claim-graph-drift-closure.md  2026-05-24-workspace-bootstrap-and-hooks.md  2026-05-25-verifiers-a-and-b.md  2026-05-28-subprocess-wrapper-and-context-builder.md  2026-05-31-harness-trustworthiness-remediation.md  (+4 more)
harness/: __main__.py  bootstrap.py  claim_graph.py  cli.py  context.py  morning_brief.py  orchestrator.py  round_ledger.py  scorecard.py  spawn.py  verifiers.py
tests/: test_bootstrap.py  test_canonical_registry.py  test_canonicalization_apply.py  test_claim_graph_schemas.py  test_claim_graph_validators.py  test_cli_doctor.py  test_cli_init.py  test_cli_reset_config.py  test_cli_run.py  test_collision_detection.py  test_commit_msg_hook.py  test_context.py  test_coverage_asymmetry.py  test_decision_registration.py  test_decision_registry.py  test_hook_parity.py  test_morning_brief_render.py  test_orchestrator_hook_reject.py  test_orchestrator_loop.py  test_orchestrator_repo_adapter.py  test_orchestrator_round.py  test_orchestrator_score_gate.py  test_pre_commit_hook.py  test_reviewer_gating.py  test_round_ledger.py  test_scorecard.py  test_section_retag.py  test_skeleton.py  test_spawn.py  test_verifiers.py  test_workspace_template.py
tests/fixtures/: fake_cli.py
workspace_template/: .gitignore  constitution.md  goal.toml  harness.toml  seed_doc.md
workspace_template/hooks/: commit-msg  pre-commit
(+9 files in other folders)
